added sentence entry

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,3 +1,5 @@
+<input type="text" name="name" ng-model="app.sentence">
+
 <button type="button" name="button" ng-click='app.scramble()'>Scramble
 </button>
 <p>
