--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,8 +1,6 @@
 <input type="text" name="name" ng-model="app.sentence">
-
-<button type="button" name="button" ng-click='app.scramble()'>Scramble
+<button class="btn btn-primary" type="button" name="button" ng-click='app.scramble()'>Scramble
 </button>
 <p>
-  {{app.sentence}}
+  {{app.sentenceOutput}}
 </p>
-test
